
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int LISTEN_DESCRIPTOR ;
 int SIGUSR2 ;
 int close (int) ;
 scalar_t__ fork () ;
 int getppid () ;
 int kill (int,int ) ;
 int server_loop (int ) ;
 int setsid () ;
 int ssl_init () ;

int main(int argc, char *argv[])
{
    int pid = getppid();


    if (fork() == 0) {

        setsid();


        kill(pid, SIGUSR2);
        close(0); close(1); close(2);
        ssl_init();
        server_loop(LISTEN_DESCRIPTOR);
    }
    return 0;
}
