; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_91.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_91.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SIGUSR2 = common dso_local global i32 0, align 4
@LISTEN_DESCRIPTOR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %7 = call i32 (...) @getppid()
  store i32 %7, i32* %6, align 4
  %8 = call i64 (...) @fork()
  %9 = icmp eq i64 %8, 0
  br i1 %9, label %10, label %21

10:                                               ; preds = %2
  %11 = call i32 (...) @setsid()
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* @SIGUSR2, align 4
  %14 = call i32 @kill(i32 %12, i32 %13)
  %15 = call i32 @close(i32 0)
  %16 = call i32 @close(i32 1)
  %17 = call i32 @close(i32 2)
  %18 = call i32 (...) @ssl_init()
  %19 = load i32, i32* @LISTEN_DESCRIPTOR, align 4
  %20 = call i32 @server_loop(i32 %19)
  br label %21

21:                                               ; preds = %10, %2
  ret i32 0
}

declare dso_local i32 @getppid(...) #1

declare dso_local i64 @fork(...) #1

declare dso_local i32 @setsid(...) #1

declare dso_local i32 @kill(i32, i32) #1

declare dso_local i32 @close(i32) #1

declare dso_local i32 @ssl_init(...) #1

declare dso_local i32 @server_loop(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
